--- a/src/pages/BlubberPatrol.page
+++ b/src/pages/BlubberPatrol.page
@@ -58,15 +58,24 @@
                 </apex:panelGroup>
                 <apex:panelGroup>
                     <apex:outputPanel id="Charts">
-                        <apex:image url="{!chartURL}" />
+                        <apex:image url="{!chartURL}" /> <!-- Don't need to hide when using the new API. -->
                         <div id="chart_div1"></div>
                         <script type="text/javascript">
-                            // Any JS placed here will be fired when the output panel is rerendered.
+                            // Any JS placed here will be fired when the output panel is rerendered. And it *HAS*
+                            // to be here. It will not work if put in the header.
                             (function(){
-                                var data = google.visualization.arrayToDataTable([[{!chartData}]]);
-                                var options = {{!chartOptions}};
-                                var chart = new google.visualization.ColumnChart(document.getElementById('chart_div1'));
-                                chart.draw(data, options);
+                                var whichAPI='{!whichAPI}';
+                                var e = document.getElementById('chart_div1');
+                                if (whichAPI == 'newAPI') {
+                                    e.style.display = 'block' //Show the Div.
+                                    // Don't mess with this syntax! It won't work any other way:
+                                    var data = google.visualization.arrayToDataTable([[{!chartData}]]);
+                                    var options = {{!chartOptions}};
+                                    var chart = new google.visualization.ColumnChart(e);
+                                    chart.draw(data, options);
+                                } else {
+                                    e.style.display = 'none'; //Hide the Div.
+                                }
                             })();
                         </script>
                     </apex:outputPanel>
