--- a/src/pages/BlubberPatrol.page
+++ b/src/pages/BlubberPatrol.page
@@ -1,11 +1,12 @@
 <apex:page docType="html-5.0" controller="BlubberPatrolCharts">
+    <apex:stylesheet value="{!$Resource.BPStyle}" />
     
     <!-- Google Visualization API code. No JavaScript code is needed for the original Chart API. -->
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script> <!-- Load the AJAX API -->
 	<script type="text/javascript">
         google.load('visualization', '1.0', {'packages':['corechart']}); // Load the Visualization API and the chart package.   
 	</script>
-    
+
     <!-- 
     We use a panelGrid with 2 columns. 
     In column 1 of the first row, is a nested panelGrid with 2 columns holding the radio buttons & number fields.
@@ -42,7 +43,18 @@
                                     see if there is data present, and is turned off. See the notes in the controller -->
                                 <apex:outputpanel id="Status">
                                     <apex:outputText value="{!statusValue}"></apex:outputText>
-                                    <apex:actionPoller action="{!checkData}" rerender="Status" interval="5" enabled="{!pollerOn}"></apex:actionPoller> 
+                                    <!-- This is used when installing the sample data on first-run. 
+                                         It is switched on & off by checkData(). -->
+                                    <div style="{!showProgress}">
+                                        <div class="popupBackground" />
+                                        <div class="popupPanel">
+                                            <table border="0" width="100%" height="100%">
+                                                <tr><td align="center"><p style="font-size: 14px"><b>Installing sample data...</b></p></td></tr>
+                                                <tr><td align="center"><img src="{!$Resource.BPWaitGIF}"/></td></tr>
+                                            </table>
+                                        </div>
+                                    </div>
+                                    <apex:actionPoller action="{!checkData}" rerender="Status" interval="5" enabled="{!pollerOn}"></apex:actionPoller>
                                 </apex:outputpanel>
                                 <br/><br/><hr/><br/>
                                 <apex:selectRadio value="{!whichAPI}" id="whichAPI" layout="pageDirection">
@@ -52,7 +64,6 @@
                             </apex:panelGroup>
                             <apex:panelGroup >
                                 <div align="Center"> <!-- We need this Div to center the button. -->
-                                    <!-- <apex:commandButton action="{!makeChart}" value="Make Chart"/> -->
                                     <apex:commandButton action="{!makeChart}" value="Make Chart" rerender="Charts"/>
                                 </div>
                             </apex:panelGroup>                            
@@ -86,5 +97,5 @@
             </apex:panelGrid>
         </apex:pageBlock>
     </apex:form>
-    
+
 </apex:page>
